Fixes #18, overlap with placeholder text when writing long messages

--- a/www/sass/_steps.scss
+++ b/www/sass/_steps.scss
@@ -174,8 +174,9 @@ textarea#inputMessage {
   &::after {
     display: block;
     position: absolute;
-    top: 12px;
-    left: 12px;
+    top: 1px;
+    left: 1px;
+    right: 20px;
     letter-spacing: 0;
     text-transform: none;
     font-family: 'DroidSerif', serif;
@@ -184,6 +185,10 @@ textarea#inputMessage {
     z-index: 1;
     font-size: 16px;
     content: 'Dear [Representative/Senator],';
+    background-color: #fff;
+    padding-left: 12px;
+    padding-top: 12px;
+    padding-bottom: 10px;
   }
 }
 .panel {
